bin/tests/snapshots/blank_lines__2aa4ff45089f7aefe8f94c85c8fd7c33_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  beta = 2;


}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,5 @@
 {
   alpha = 1;
 
   beta = 2;
-
-
 }
