bin/tests/snapshots/blank_lines__2aa4ff45089f7aefe8f94c85c8fd7c33_lint_errfmt.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  beta = 2;


}
---
<temp_file_path>>4:12:W:35:[blank_lines] no blank line may come before the closing delimiter
