bin/tests/snapshots/blank_lines__2aa4ff45089f7aefe8f94c85c8fd7c33_lint_json.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;

  beta = 2;


}
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "blank_lines",
      "note": "Excess blank lines",
      "code": 35,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 4,
              "column": 12
            },
            "to": {
              "line": 7,
              "column": 1
            }
          },
          "message": "no blank line may come before the closing delimiter",
          "suggestion": {
            "at": {
              "from": {
                "line": 4,
                "column": 12
              },
              "to": {
                "line": 7,
                "column": 1
              }
            },
            "fix": "\n"
          }
        }
      ]
    }
  ]
}
