bin/tests/snapshots/blank_lines__2f0d5808c2162d3c39b2ef25f63779c8_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  text = ''
    foo


    bar
  '';
}
---
