bin/tests/snapshots/blank_lines__3be2a7e3d382a3b27eb43393ff306a08_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  outer = {
    alpha = 1;


    beta = 2;
  };
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,7 @@
 {
   outer = {
     alpha = 1;
 
-
     beta = 2;
   };
 }
