bin/tests/snapshots/blank_lines__3be2a7e3d382a3b27eb43393ff306a08_lint_errfmt.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  outer = {
    alpha = 1;


    beta = 2;
  };
}
---
<temp_file_path>>3:15:W:35:[blank_lines] no more than one blank line may follow one another
