bin/tests/snapshots/blank_lines__6e9802af6cf7a9a23476e89f8595622f_fix.snap
---
source: bin/tests/blank_lines.rs
assertion_line: 7
---
{
  alpha = 1;


  beta = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,6 +1,5 @@
 {
   alpha = 1;
 
-
   beta = 2;
 }
